--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "ProductManager.js",
   "type": "module",
   "scripts": {
-    "start": "node --watch src/app.js --mode production --persistence database -u adminprod -p admin ",
-    "dev": "node --watch src/app.js --mode development --persistence database -u admindev -p admin ",
+    "start": "node --env-file=.env src/app.js",
+    "dev": "node src/app.js --mode development --persistence database -u admindev -p admin ",
     "test": "mocha test/supertest.test.js --persistence database"
   },
   "mocha": {
@@ -16,13 +16,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@ngrok/ngrok": "^1.2.0",
     "bcrypt": "^5.1.1",
-    "commander": "^12.0.0",
     "connect-mongo": "^5.1.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "express-handlebars": "^7.1.2",
     "express-session": "^1.18.0",
@@ -44,7 +41,6 @@
     "winston": "^3.12.0"
   },
   "devDependencies": {
-    "@faker-js/faker": "^8.4.1",
     "chai": "^5.1.0",
     "mocha": "^10.4.0",
     "supertest": "^6.3.4"
