--- a/package.json
+++ b/package.json
@@ -5,12 +5,7 @@
   "main": "ProductManager.js",
   "type": "module",
   "scripts": {
-    "start": "node --env-file=.env src/app.js",
-    "dev": "node src/app.js --mode development --persistence database -u admindev -p admin ",
-    "test": "mocha test/supertest.test.js --persistence database"
-  },
-  "mocha": {
-    "timeout": 15000
+    "start": "node src/app.js"
   },
   "keywords": [],
   "author": "",
@@ -39,10 +34,5 @@
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.0",
     "winston": "^3.12.0"
-  },
-  "devDependencies": {
-    "chai": "^5.1.0",
-    "mocha": "^10.4.0",
-    "supertest": "^6.3.4"
   }
 }
